frontend/app/styles/app.scss
// Main app styles, text and bg colors can be changed if you want.

$text-color: #5c3600;
$bg-color: #fbd6a2;

* {
  font-family: Lexend, sans-serif;
}
body {
  background: $bg-color;
  color: $text-color;
  position: absolute;
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
}

.header {
  // Align the header content to the left, and make it 100% wide. Add padding on all sides to make it look nice. Inline all the elements inside the header.
  background: $bg-color;
  position: sticky;
  color: $text-color;
  text-align: left;
  width: 100%;
  padding: 1rem;
  display: flex;
  align-items: start;
  justify-content: start;
  flex-direction: row;
  gap: 0.3em;
  padding: 0.8em;
  font-size: 1.2em;
  flex-shrink: 0;
  top: 0;

  * {
    display: inline;
  }
  .title {
    font-weight: 600;
  }
  .separator {
    font-weight: 400;
  }
  .page {
    font-weight: 400;
  }
}

.main {
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: left;
  padding: 0.5em;
  flex: 1 0 auto;
}

.footer {
  background: $bg-color !important;
  position: sticky;
  display: flex;
  bottom: 0;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: center;
  justify-content: space-around;
  align-items: flex-end;
  padding-top: 0.4em;
  padding-bottom: 0.4em;
  background-color: var(--bg-color);
  .button {
    color: $text-color !important;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: flex-end;
    align-items: center;
    font-size: 0.9em;
    font-weight: 500;
    padding: 0.4em;
    border-radius: 5px;
    cursor: pointer;
    user-select: none;
    .icon {
      width: 30px;
      height: 30px;
    }
    &.active {
      background-color: var(--text-color);
      color: var(--bg-color);
    }
  }
}

